--- a/LeilãodeEntregas/Properties/Resources.resx
+++ b/LeilãodeEntregas/Properties/Resources.resx
@@ -118,22 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="a-melhor-esfiha-delivery-da-zona-norte-descubra-porque_11-6" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\a-melhor-esfiha-delivery-da-zona-norte-descubra-porque_11-6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="network_alt" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\network_alt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="envio" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\envio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="Delivery-dicas-para-aperfeiçoar-suas-entregas-em-domicílio-automacao-comercial-blumenau" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Delivery-dicas-para-aperfeiçoar-suas-entregas-em-domicílio-automacao-comercial-blumenau.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="a-melhor-esfiha-delivery-da-zona-norte-descubra-porque_11-6" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\a-melhor-esfiha-delivery-da-zona-norte-descubra-porque_11-6.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Delivery-Express" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Delivery-Express.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="envio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\envio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="path_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\path_32.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="network_alt" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\network_alt.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Astar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Astar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Dijkstra" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Dijkstra.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
